--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
-<head><title>Google Homepage</title></head>
+<html lang="en">
+<head>
+    <title>Google Homepage</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+</head>
+
 <body>
-    <div id="google-logo">
-        <img src="images/googlelogo_color_272x92dp.png" alt="google logo">
+    <div id="google-logo-div">
+        <img id ="google-logo" src="images/googlelogo_color_272x92dp.png" alt="google logo">
+    </div>
+    <div id="search-form-div">
+        <form id="search-form" action="~/the_odin_project/google-homepage" method="post">
+            <label for="search">
+                <input type="text" name="search">
+            </label>
+        </form>
     </div>
 </body>
+</html>
