Position logo and search bar

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 </head>
 
 <body>
+    <div class="search-container">
     <div id="google-logo-div">
         <img id ="google-logo" src="images/googlelogo_color_272x92dp.png" alt="google logo">
     </div>
     <div id="search-form-div">
         <form id="search-form" action="~/the_odin_project/google-homepage" method="post">
             <label for="search">
-                <input type="text" name="search">
+                <input id="search-bar" type="text" name="search">
             </label>
         </form>
+    </div>
     </div>
 </body>
 </html>
