Change nav-bar HTML  and CSS

--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
 </head>
 
 <body>
+    <div class="nav-bar">
+        <ul class="nav-list">
+            <li><a href="https://mail.google.com">Gmail</a></li>
+            <li><a href="https://www.google.co.nz/imghp?hl=en&tab=wi&ogbl">Images</a></li>
+            <li><a href="https://www.google.co.nz/intl/en/about/products?tab=wh"><img src=""></a></li>
+            <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"><button>Sign In</button></a></li>
+        </ul>
+    </div>
+
     <div class="search-container">
-    <div id="google-logo-div">
-        <img id ="google-logo" src="images/googlelogo_color_272x92dp.png" alt="google logo">
-    </div>
-    <div id="search-form-div">
-        <form id="search-form" action="~/the_odin_project/google-homepage" method="post">
-            <label for="search">
-                <input id="search-bar" type="text" name="search">
-            </label>
-        </form>
-    </div>
+        <div id="google-logo-div">
+            <img id ="google-logo" src="images/googlelogo_color_272x92dp.png" alt="google logo">
+        </div>
+        <div id="search-form-div">
+            <form id="search-form" action="~/the_odin_project/google-homepage" method="post">
+                <label for="search">
+                    <input id="search-bar" type="text" name="search">
+                </label>
+            </form>
+        </div>
     </div>
 </body>
 </html>
