--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 
 <body>
-    <div class="nav-bar">
-        <ul class="nav-list">
-            <li><a href="https://mail.google.com">Gmail</a></li>
-            <li><a href="https://www.google.co.nz/imghp?hl=en&tab=wi&ogbl">Images</a></li>
-            <li><a href="https://www.google.co.nz/intl/en/about/products?tab=wh"><img src=""></a></li>
-            <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"><button>Sign In</button></a></li>
+    <div class="nav-bar-container">
+        <ul class="nav-bar">
+            <li class="header"><a href="https://mail.google.com">Gmail</a></li>
+            <li class="header"><a href="https://www.google.co.nz/imghp?hl=en&tab=wi&ogbl">Images</a></li>
+            <li class="header"><a href="https://www.google.co.nz/intl/en/about/products?tab=wh"><img src=""></a></li>
+            <li class="header"><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"><button>Sign In</button></a></li>
         </ul>
     </div>
 
@@ -26,6 +26,18 @@
                 </label>
             </form>
         </div>
+    </div>
+
+    <div class="footer-container">
+        <ul class="footer">
+            <li class="footer-left"><a href="https://ads.google.com/intl/en_nz/home//">Advertising</a></li>
+            <li class="footer-left"><a href="">Business</a></li>
+            <li class="footer-left"><a href="">About</a></li>
+            <li class="footer-left"><a href="">How Search Works</a></li>
+            <li class="footer-right"><a href="">Settings</a></li>
+            <li class="footer-right"><a href="">Terms</a></li>
+            <li class="footer-right"><a href="">Privacy</a></li>
+        </ul>
     </div>
 </body>
 </html>
