Various CSS additions

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <div class="nav-bar-container">
         <ul class="nav-bar">
-            <li class="header"><a href="https://mail.google.com">Gmail</a></li>
-            <li class="header"><a href="https://www.google.co.nz/imghp?hl=en&tab=wi&ogbl">Images</a></li>
-            <li class="header"><a href="https://www.google.co.nz/intl/en/about/products?tab=wh"><img src=""></a></li>
-            <li class="header"><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"><button>Sign In</button></a></li>
+            <li class="header"><a class="header-link" href="https://mail.google.com">Gmail</a></li>
+            <li class="header"><a class="header-link" href="https://www.google.co.nz/imghp?hl=en&tab=wi&ogbl">Images</a></li>
+            <li class="header"><a class="header-link" href="https://www.google.co.nz/intl/en/about/products?tab=wh"><img src=""></a></li>
+            <li class="header"><a class="header-link" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"><button>Sign In</button></a></li>
         </ul>
     </div>
 
