Add search submit buttons

--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
             <img id ="google-logo" src="images/googlelogo_color_272x92dp.png" alt="google logo">
         </div>
         <div id="search-form-div">
-            <form id="search-form" action="~/the_odin_project/google-homepage" method="post">
+            <form id="search-form">
                 <label for="search">
                     <input id="search-bar" type="text" name="search">
+                </label>
+                <label for="submit-search">
+                    <input id="search-submit" type="submit" name="submit-search" value="Google Search">
+                </label>
+                <label for="lucky-search">
+                    <input id="feeling-lucky" type="submit" name="lucky-search" value="I'm Feeling Lucky">
                 </label>
             </form>
         </div>
