Style search bar buttons

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
                 <label for="search">
                     <input id="search-bar" type="text" name="search">
                 </label>
-                <label for="submit-search">
-                    <input id="search-submit" type="submit" name="submit-search" value="Google Search">
-                </label>
-                <label for="lucky-search">
-                    <input id="feeling-lucky" type="submit" name="lucky-search" value="I'm Feeling Lucky">
-                </label>
+                <div class="search-buttons">
+                    <label for="submit-search">
+                        <input class="submit" id="search-submit" type="submit" name="submit-search" value="Google Search">
+                    </label>
+                    <label for="lucky-search">
+                        <input class="submit" id="feeling-lucky" type="submit" name="lucky-search" value="I'm Feeling Lucky">
+                    </label>
+                </div>
             </form>
         </div>
     </div>
