CSS addition for the search bar

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         </div>
         <div id="search-form-div">
             <form id="search-form">
-                <label for="search">
-                    <input id="search-bar" type="text" name="search">
-                </label>
+                <div class="search-wrapper">
+                    <img src="" id="search-icon">
+                    <label for="search">
+                        <input id="search-bar" type="text" name="search">
+                    </label>
+                </div>
                 <div class="search-buttons">
                     <label for="submit-search">
                         <input class="submit" id="search-submit" type="submit" name="submit-search" value="Google Search">
