--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li class="header"><a class="header-link" href="https://mail.google.com">Gmail</a></li>
             <li class="header"><a class="header-link" href="https://www.google.co.nz/imghp?hl=en&tab=wi&ogbl">Images</a></li>
             <li class="header"><a class="header-link" href="https://www.google.co.nz/intl/en/about/products?tab=wh"><img src=""></a></li>
-            <li class="header"><a class="header-link" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"><button>Sign In</button></a></li>
+            <li class="header"><a class="sign-in" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"><button>Sign In</button></a></li>
         </ul>
     </div>
 
