Postion header text

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <div class="nav-bar-container">
         <ul class="nav-bar">
-            <li class="header"><a class="header-link" href="https://mail.google.com">Gmail</a></li>
-            <li class="header"><a class="header-link" href="https://www.google.co.nz/imghp?hl=en&tab=wi&ogbl">Images</a></li>
-            <li class="header"><a class="header-link" href="https://www.google.co.nz/intl/en/about/products?tab=wh"><img src="/home/liger/the_odin_project/google-homepage/images/i1_1967ca6aa.png" id="nine-squares"></a></li>
+            <li class="header header-text" ><a class="header-link" href="https://mail.google.com">Gmail</a></li>
+            <li class="header header-text" ><a class="header-link" href="https://www.google.co.nz/imghp?hl=en&tab=wi&ogbl">Images</a></li>
+            <li class="header header-text" ><a class="header-link" href="https://www.google.co.nz/intl/en/about/products?tab=wh"><img src="/home/liger/the_odin_project/google-homepage/images/i1_1967ca6aa.png" id="nine-squares"></a></li>
             <li class="header"><a class="sign-in" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"><button>Sign In</button></a></li>
         </ul>
     </div>
